<resources>
    <string name="app_name">급식 정보</string>
    <string name="select_date">날짜 선택</string>
    <string name="settings">설정</string>
    <string name="show_cal">칼로리 정보 표시</string>
    <string name="show_ntr">영양 정보 표시</string>
    <string name="save_and_exit">저장 및 돌아가기</string>
    <string name="goto_school">학교 정보 확인 또는 변경</string>
    <string name="school_info">학교 정보</string>
    <string name="sch_name">학교명 검색</string>
    <string name="search">검색</string>
    <string name="set_alarm">매일 지정된 시간 알림 받기</string>
</resources>