<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        tools:context=".SettingsActivity">

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/show_cal"
            android:text="@string/show_cal"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/show_ntr"
            android:text="@string/show_ntr"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/set_alarm"
            android:text="@string/set_alarm"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <View
            android:layout_margin="20dp"
            android:background="@color/wrap"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <Button
            android:id="@+id/school_settings"
            android:text="@string/goto_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/confirm_setting"
            android:text="@string/save_and_exit"
            android:backgroundTint="@color/design_default_color_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>